package texttospeech;

option java_package = "jp.go.nict.langrid.client.protobuf.proto";
option java_outer_classname = "TextToSpeechProtos";

import "common.proto";

message SpeakRequest {
  repeated Header headers = 1;
  required string language = 2;
  required string text = 3;
  required string voiceType = 4;
  required string audioTypeType = 5;
}

message SpeakResponse {
  repeated Header headers = 1;
  optional Fault fault = 2;
  optional string voiceType = 3;
  optional string audioType = 4;
  optional bytes audio = 5;
}

message GetSupportedLanguagesRequest{
  repeated Header headers = 1;
}

message GetSupportedLanguagesResponse{
  repeated Header headers = 1;
  optional Fault fault = 2;
  repeated string results = 3;
}

message GetSupportedVoiceTypesRequest{
  repeated Header headers = 1;
}

message GetSupportedVoiceTypesResponse{
  repeated Header headers = 1;
  optional Fault fault = 2;
  repeated string results = 3;
}

message GetSupportedAudioTypesRequest{
  repeated Header headers = 1;
}

message GetSupportedAudioTypesResponse{
  repeated Header headers = 1;
  optional Fault fault = 2;
  repeated string results = 3;
}

service Service{
  rpc speak(SpeakRequest) returns (SpeakResponse);
  rpc getSupportedLanguages(GetSupportedLanguagesRequest) returns (GetSupportedLanguagesResponse);
  rpc getSupportedVoiceTypes(GetSupportedVoiceTypesRequest) returns (GetSupportedVoiceTypesResponse);
  rpc getSupportedAudioTypes(GetSupportedAudioTypesRequest) returns (GetSupportedAudioTypesResponse);
}
